# report-generator-model

./: .gitattributes  README.md
M2KT_fork/: .gitignore  README.md  Test.jsonl  chexpert_labeled.csv  json_converter.py  pyproject.toml  script_best_model.ipynb  test.py
M2KT_fork/config/: iu_openai-clip.yml
M2KT_fork/data/iu/: Train.jsonl  TrainBalanced.jsonl  Valid.jsonl  check.py
M2KT_fork/data/iu/r2gen_split/: Enc2Dec-50_0_test_generated.json  Enc2Dec-7_0_test_generated.json  Enc2Dec-7_0_val_generated.json  asd.py  ep28val.json  id_label.csv  res.csv  test.py  wout_healthy.json
M2KT_fork/data/mimic/finding/: res.csv
M2KT_fork/models/: lamrg.py
M2KT_fork/modules/: dataloaders.py  datasets.py  loss.py  trainer.py  visual_extractor.py
M2KT_fork/records/: iu_xray.csv  mimic_cxr.csv
M2KT_fork/results/iu_xray/V12_openai-clip_labelloss_rankloss_3rd_openai-clip_try_20240415-054258/: Enc2Dec-1_0_test_generated.json  Enc2Dec-1_0_val_generated.json  Enc2Dec-2_0_test_generated.json  Enc2Dec-2_0_val_generated.json  Enc2Dec-3_0_test_generated.json  Enc2Dec-3_0_val_generated.json  config.json
M2KT_fork/results/iu_xray/V12_openai-clip_labelloss_rankloss_4th_openai-clip_try_B32_20240415-155721/: Enc2Dec-10_0_test_generated.json  Enc2Dec-10_0_val_generated.json  Enc2Dec-11_0_test_generated.json  Enc2Dec-11_0_val_generated.json  Enc2Dec-12_0_test_generated.json  Enc2Dec-12_0_val_generated.json  Enc2Dec-13_0_test_generated.json  Enc2Dec-13_0_val_generated.json  Enc2Dec-14_0_test_generated.json  Enc2Dec-14_0_val_generated.json  Enc2Dec-15_0_val_generated.json  (+38 more)
(+462 files in other folders)
