[tool.poetry]
name = "M2KT"
version = "0.1.0"
description = ""
authors = ["Kazymov_006 <RaySkarken@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = { url = "https://download.pytorch.org/whl/cu118/torch-2.2.1%2Bcu118-cp312-cp312-win_amd64.whl"}
torchvision = { url = "https://download.pytorch.org/whl/cu118/torchvision-0.17.1%2Bcu118-cp312-cp312-win_amd64.whl"}
pandas = "^2.2.1"
pycocoevalcap = "^1.2"
scipy = "^1.12.0"
tqdm = "^4.66.2"
tensorboardx = "^2.6.2.2"
ipdb = "^0.13.13"
pyyaml = "^6.0.1"
yacs = "^0.1.8"
scikit-learn = "^1.4.1.post1"
ftfy = "^6.2.0"
regex = "^2023.12.25"
clip = {git = "https://github.com/openai/CLIP.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
